test/sematest/valid/unary_expression.java
class Foo {
  public static void main(String[] args) {
    int k = 0;

    int f = -k;

    boolean b = true;
    b = !b;
    b = !!!!!!!b;

  }
}
