test/sematest/invalid/use_before_definition.java




class Foo {
  public static void main(String[] args) {
    int l = k + 1;
    int k = 3;
  }
}
